clean up and move queries to separete file