@@ -12,6 +12,8 @@ import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
+import static com.sam.coin.repository.CoinQueries.*;
+
 @Repository
 public class JdbcCoinRepository implements CoinRepository {
 
@@ -21,56 +23,6 @@ public class JdbcCoinRepository implements CoinRepository {
         this.jdbcTemplate = jdbcTemplate;
     }
 
-    private static final String INSERT_COIN = "INSERT INTO %s (id, time_stamp, symbol, coin_id, coin_name, price_eur, price_usd, price_btc, price_eth, market_cap_eur, market_cap_usd, market_cap_btc, market_cap_eth, total_volume_eur, total_volume_usd, total_volume_btc, total_volume_eth, twitter_followers, reddit_avg_posts_48_hours, reddit_avg_comments_48_hours, reddit_accounts_active_48_hours, reddit_subscribers, dev_forks, dev_stars, dev_total_issues, dev_closed_issues, dev_pull_requests_merged, dev_pull_request_contributors, dev_commit_count_4_weeks, dev_code_additions_4_weeks, dev_code_deletions_4_weeks, public_alexa_rank) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)";
-    private static final String SELECT_ALL_COINS = "SELECT * FROM %s";
-    private static final String SELECT_COIN_BY_ID = "SELECT * FROM %s WHERE id = ?";
-    private static final String SELECT_COINS_BY_DATE_RANGE = "SELECT * FROM %s WHERE time_stamp BETWEEN ? AND ?";
-    private static final String SELECT_COINS_BY_COIN_ID_AND_DATE_RANGE = "SELECT * FROM %s WHERE coin_id = ? AND time_stamp BETWEEN ? AND ?";
-    private static final String COUNT_BY_COIN_ID = "SELECT COUNT(*) FROM %s WHERE coin_id = ?";
-    private static final String DELETE_COIN_BY_ID = "DELETE FROM %s WHERE id = ?";
-    private static final String SELECT_ALL_DUPLICATES_WITH_SAME_DATE =
-            "SELECT * FROM %s WHERE DATE(time_stamp) IN (" +
-                    "SELECT DATE(time_stamp) FROM %s GROUP BY DATE(time_stamp) HAVING COUNT(*) > 1) " +
-                    "ORDER BY time_stamp DESC";
-
-    private static final String DELETE_DUPLICATES_WITH_SAME_DATE =
-            "DELETE FROM %s WHERE ctid NOT IN (" +
-                    "SELECT DISTINCT ON (DATE(time_stamp)) ctid FROM %s ORDER BY DATE(time_stamp), ctid)";
-
-    private static final String SELECT_LAST_VALID_DATE_FOR_COIN =
-            "WITH RECURSIVE date_series AS (" +
-                    "SELECT DISTINCT DATE(time_stamp) AS entry_date " +
-                    "FROM %s " +
-                    "ORDER BY entry_date DESC " +
-                    "LIMIT 100" +  // Adjust this limit if needed
-                    "), " +
-                    "numbered_dates AS (" +
-                    "SELECT " +
-                    "entry_date, " +
-                    "ROW_NUMBER() OVER (ORDER BY entry_date DESC) AS row_num " +
-                    "FROM date_series" +
-                    "), " +
-                    "sequences AS (" +
-                    "SELECT " +
-                    "d1.entry_date AS start_date, " +
-                    "d1.row_num AS start_row, " +
-                    "1 AS length " +
-                    "FROM numbered_dates d1 " +
-                    "UNION ALL " +
-                    "SELECT " +
-                    "s.start_date, " +
-                    "s.start_row, " +
-                    "s.length + 1 " +
-                    "FROM sequences s " +
-                    "JOIN numbered_dates d ON d.row_num = s.start_row + s.length " +
-                    "WHERE d.entry_date = s.start_date - INTERVAL '1 day' * s.length " +
-                    "AND s.length < %d" +
-                    ") " +
-                    "SELECT start_date AS last_valid_date " +
-                    "FROM sequences " +
-                    "WHERE length = %d " +
-                    "ORDER BY start_date DESC " +
-                    "LIMIT 1";
 
     @Override
     public Coin save(Coin coin) {
@@ -99,7 +51,7 @@ public class JdbcCoinRepository implements CoinRepository {
     @Override
     public Optional<Coin> findById(String tableName, UUID id) {
         List<Coin> results = jdbcTemplate.query(String.format(SELECT_COIN_BY_ID, tableName), new CoinRowMapper(), id);
-        return results.isEmpty() ? Optional.empty() : Optional.of(results.get(0));
+        return results.isEmpty() ? Optional.empty() : Optional.of(results.getFirst());
     }
 
     @Override
@@ -126,7 +78,7 @@ public class JdbcCoinRepository implements CoinRepository {
     public Optional<Coin> findBySymbolAndTimestamp(String tableName, String symbol, Date timestamp) {
         String sql = String.format("SELECT * FROM %s WHERE symbol = ? AND time_stamp = ?", tableName);
         List<Coin> results = jdbcTemplate.query(sql, new CoinRowMapper(), symbol, timestamp);
-        return results.isEmpty() ? Optional.empty() : Optional.of(results.get(0));
+        return results.isEmpty() ? Optional.empty() : Optional.of(results.getFirst());
     }
 
     @Override
@@ -151,17 +103,12 @@ public class JdbcCoinRepository implements CoinRepository {
     @Override
     public Date getLastValidDateForCoin(String tableName, String coinId, int sequenceLength) {
         String sqlQuery = String.format(SELECT_LAST_VALID_DATE_FOR_COIN,
-                tableName,         // Tabellenname
-                sequenceLength,    // Mindestgröße der Gruppe
-                sequenceLength,    // Maximale Sequenznummer
-                sequenceLength     // Erforderliche Anzahl von Tagen in der Sequenz
+                tableName,         // Table name
+                sequenceLength,    // Minimum group size and maximum sequence number
+                sequenceLength     // Required number of days in the sequence
         );
 
         return jdbcTemplate.queryForObject(sqlQuery, Date.class);
-    }
-
-    private String getTableName(String coinId) {
-        return coinId.equals("bitcoin") ? "coins" : coinId.replace("-", "_");
     }
 
     private static class CoinRowMapper implements RowMapper<Coin> {
